ADD invoice number 1st input text 1st approach

--- a/src/app/pages/product-orders/sections/invoices-info/invoices-info.component.html
+++ b/src/app/pages/product-orders/sections/invoices-info/invoices-info.component.html
@@ -70,7 +70,18 @@
                 {{invoice?.date | date:'EEEE, dd/MM/yy, HH:mm'}}
               </td>
               <td class="md:table-cell px-6 py-4 text-center align-middle">
-                {{invoice?.name}}
+                @if(role=='Seller'){
+                  @if (editingIndex === idx) {
+                    <input [(ngModel)]="editableInvoiceName" type="text" id="invoicename"
+                      class="mb-2 border-gray-300 dark:border-secondary-200 bg-gray-50 dark:bg-secondary-300 border 
+                      dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 
+                      block w-full p-2.5" />
+                  } @else {
+                    {{invoice?.name}}
+                  }  
+                }@else{
+                  {{invoice?.name}}
+                }                
               </td>
               <td class="md:table-cell px-6 py-4 text-center align-middle">
                 {{invoice?.type}}
@@ -85,7 +96,7 @@
                     <span class="bg-blue-100 dark:bg-secondary-100 text-yellow-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-yellow-500">{{ 'INVOICES._pending' | translate }}</span>
                 }
               </td>
-              <td class="px-6 py-4 text-center align-middle">
+              <td class="px-6 py-4 text-center align-middle flex flex-row">
                 <button (click)="toggleShowDetails(invoice);$event.stopPropagation();" type="button" class="text-white bg-primary-100 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
                   <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 14">
                     <g stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
@@ -94,6 +105,23 @@
                     </g>
                   </svg>
                 </button>
+                @if(role=='Seller'){
+                  @if (editingIndex === idx) {
+                    <!-- Save button -->
+                    <button (click)="saveInvoice(idx, invoice);" type="button" 
+                      class="text-white bg-green-500 hover:bg-green-700 focus:ring-4 focus:outline-none 
+                      focus:ring-green-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
+                      <fa-icon [icon]="faSave" class="text-[18px] text-white align-middle"></fa-icon>
+                    </button>
+                  } @else {
+                    <!-- Edit button -->
+                    <button (click)="editInvoice(idx, invoice);" type="button" 
+                      class="text-white bg-primary-100 hover:bg-blue-800 focus:ring-4 focus:outline-none 
+                      focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
+                      <fa-icon [icon]="faEdit" class="text-[18px] text-white align-middle"></fa-icon>
+                    </button>
+                  }
+              }
               </td>
             </tr>
           }
