--- a/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
@@ -1151,16 +1151,56 @@
                     </div>
                 </div>
                 <div class="grid grid-cols-2 gap-4 mt-4">
-                    <multiple-select [options]="availableCountries"></multiple-select>
-                    <multiple-select [options]="availableMarketplaces"></multiple-select>
+                    <select id="type"
+                     class="mb-2 shadow bg-white dark:bg-secondary-300 border border-gray-300 text-gray-900 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <option selected>Member States</option>
+                        <option value="Austria">Austria</option>
+                        <option value="Belgium">Belgium</option>
+                        <option value="Germany">Germany</option>
+                        <option value="Hungary">Hungary</option>
+                        <option value="Italy">Italy</option>
+                        <option value="Luxembourg">Luxembourg</option>
+                        <option value="Poland">Poland</option>
+                        <option value="Romania">Romania</option>
+                        <option value="Spain">Spain</option>
+                    </select>
+                    <select id="type" class="mb-2 shadow bg-white dark:bg-secondary-300 border border-gray-300 text-gray-900 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <option selected>Marketplaces</option>
+                        <option value="BEIA Software Services">BEIA Software Services</option>
+                        <option value="CloudFerro">CloudFerro</option>
+                        <option value="CSI Piemonte">CSI Piemonte</option>
+                        <option value="digitanimal">digitanimal</option>
+                        <option value="Digitel TS">Digitel TS</option>
+                        <option value="DOME">DOME</option>
+                    </select>
                 </div>
                 <h3 class="font-bold text-black dark:text-white mt-4">Exceptions</h3>
                 <p class="mb-3 text-gray-500 dark:text-gray-400">Within the above selection, never publish in the following marketplaces:</p>
                 <div class="grid grid-cols-2 gap-4 mt-4">
-                    <multiple-select [options]="availableCountries"></multiple-select>
-                    <multiple-select [options]="availableMarketplaces"></multiple-select>
+                    <select id="type"
+                     class="mb-2 shadow bg-white dark:bg-secondary-300 border border-gray-300 text-gray-900 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <option selected>Member States</option>
+                        <option value="Austria">Austria</option>
+                        <option value="Belgium">Belgium</option>
+                        <option value="Germany">Germany</option>
+                        <option value="Hungary">Hungary</option>
+                        <option value="Italy">Italy</option>
+                        <option value="Luxembourg">Luxembourg</option>
+                        <option value="Poland">Poland</option>
+                        <option value="Romania">Romania</option>
+                        <option value="Spain">Spain</option>
+                    </select>
+                    <select id="type" class="mb-2 shadow bg-white dark:bg-secondary-300 border border-gray-300 text-gray-900 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <option selected>Marketplaces</option>
+                        <option value="BEIA Software Services">BEIA Software Services</option>
+                        <option value="CloudFerro">CloudFerro</option>
+                        <option value="CSI Piemonte">CSI Piemonte</option>
+                        <option value="digitanimal">digitanimal</option>
+                        <option value="Digitel TS">Digitel TS</option>
+                        <option value="DOME">DOME</option>
+                    </select>
                 </div>
-                <div class="border border-gray-500 p-4 rounded-md w-full dark:text-gray-400 mt-4">
+                <div class="border border-gray-500 p-4 rounded-md w-full dark:text-gray-400">
                     Publish only in this marketplace: DOME
                 </div>
                 <h2 class="text-3xl font-bold text-primary-100 dark:text-white mt-8">Visibility to customers</h2>
@@ -1179,7 +1219,19 @@
                             <input id="inline-checked-radio" type="radio" value="" name="visibility-buttons" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
                             <label for="inline-checked-radio" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Authenticated customers from companies incorporated in specific countries:</label>
                         </div>
-                        <multiple-select [options]="availableCountries"></multiple-select>
+                        <select id="type"
+                        class="mb-2 shadow bg-white dark:bg-secondary-300 border border-gray-300 text-gray-900 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <option selected>Member States</option>
+                        <option value="Austria">Austria</option>
+                        <option value="Belgium">Belgium</option>
+                        <option value="Germany">Germany</option>
+                        <option value="Hungary">Hungary</option>
+                        <option value="Italy">Italy</option>
+                        <option value="Luxembourg">Luxembourg</option>
+                        <option value="Poland">Poland</option>
+                        <option value="Romania">Romania</option>
+                        <option value="Spain">Spain</option>
+                        </select>
                     </div>
                 </div>
                 <div class="flex w-full justify-items-end justify-end m-4">
